# ultimate-fastapi-tutorial

.github/: dependabot.yml
.github/workflows/: mayhem-for-api.yml
part-14-send-email-in-background/: run_your_api.sh
part-14-send-email-in-background/backend/: Dockerfile
part-14-send-email-in-background/backend/app/: pyproject.toml  run.sh
part-14-send-email-in-background/backend/app/app/api/api_v1/endpoints/: auth.py  recipe.py
part-14-send-email-in-background/frontend/: package-lock.json  package.json
