[tool.poetry]
name = "app"
version = "0.0.1"
description = "Ultimate FastAPI Tutorial"
authors = ["ChristopherGS"]

[tool.poetry.dependencies]
python = "^3.8"
greenlet = "^3.0"
httptools = "~0.6.1"
packaging = "^23.1"
uvicorn = "^0.28"
fastapi = "^0.110.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["dotenv", "email"], version = "^2.7.0"}
Jinja2 = "~3.0.1"
SQLAlchemy = "^1.0.0"
alembic = "~1.6.5"
tenacity = "~8.0.1"
httpx = "~0.18.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "~2.9.9"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
